package Model.Visitor;

public interface Visitable {

    public void accept(Visitor visitor);

}
